--- a/hardware/FishFeeder/platformio.ini
+++ b/hardware/FishFeeder/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	arduino-libraries/Stepper@^1.1.3
+	knolleary/PubSubClient@^2.8
+	gyverlibs/GyverStepper@^2.7
+monitor_speed = 115200
